--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO URL =mongodb+srv://zied:zied@clustertp.gog4s.mongodb.net/
+MONGO_URL=mongodb+srv://zied:zied@clustertp.gog4s.mongodb.net/db_test
 PORT=9000
+SECRET_KEY=Tek_Up
